HTML changes with code review comments for backend

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,14 +11,11 @@
 </head>
 <body>
 <div class="container">
-    <div class="jumbotron">
-        <h1>Playlists</h1>
-        <p>View all playlist</p>
-    </div>
     <div class="row">
-        <div class="col"></div>
         <div class="col">
-            <div class="form-group">
+            <label>Playlists</label>
+        </div>
+       <!-- <table class="col"><div class="form-group">
                 <label for="battingTeamName">Batting Team Name:</label>
                 <input type="text" class="form-control" id="battingTeamName">
             </div>
@@ -35,7 +32,10 @@
                 <input type="text" class="form-control" id="totalOvers">
             </div>
             <button type="button" class="btn btn-success">Success</button>
-        </div>
+        </table>
+        -->
+        <div id = "playlist-table"></div>
+
         <div class="col"></div>
     </div>
 </div>
