Modified web application for playlist

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,35 +9,12 @@
     <script src="/resources/js/sockjs-0.3.4.js"></script>
     <script src="/resources/js/stomp.js"></script>
 </head>
+<title>Playlists</title>
 <body>
 <div class="container">
-    <div class="row">
-        <div class="col">
-            <label>Playlists</label>
-        </div>
-       <!-- <table class="col"><div class="form-group">
-                <label for="battingTeamName">Batting Team Name:</label>
-                <input type="text" class="form-control" id="battingTeamName">
-            </div>
-            <div class="form-group">
-                <label for="bowlingTeamName">Bowling Team Name:</label>
-                <input type="text" class="form-control" id="bowlingTeamName">
-            </div>
-            <div class="form-group">
-                <label for="totalRuns">Total Runs:</label>
-                <input type="text" class="form-control" id="totalRuns">
-            </div>
-            <div class="form-group">
-                <label for="totalOvers">Total Overs:</label>
-                <input type="text" class="form-control" id="totalOvers">
-            </div>
-            <button type="button" class="btn btn-success">Success</button>
-        </table>
-        -->
+    <center><h3>Playlists</h3>
         <div id = "playlist-table"></div>
-
-        <div class="col"></div>
-    </div>
+    </center>
 </div>
 <script src="/resources/js/app.js"></script>
 </body>
